; ModuleID = '/home/carl/AnghaBench/lab/engine/code/sdl/extr_sdl_snd.c_SNDDMA_Shutdown.c'
source_filename = "/home/carl/AnghaBench/lab/engine/code/sdl/extr_sdl_snd.c_SNDDMA_Shutdown.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_2__ = type { i32* }

@sdlPlaybackDevice = common dso_local global i64 0, align 8
@.str = private unnamed_addr constant [38 x i8] c"Closing SDL audio playback device...\0A\00", align 1
@.str.1 = private unnamed_addr constant [35 x i8] c"SDL audio playback device closed.\0A\00", align 1
@SDL_INIT_AUDIO = common dso_local global i32 0, align 4
@dma = common dso_local global %struct.TYPE_2__ zeroinitializer, align 8
@dmasize = common dso_local global i64 0, align 8
@dmapos = common dso_local global i64 0, align 8
@qfalse = common dso_local global i32 0, align 4
@snd_inited = common dso_local global i32 0, align 4
@.str.2 = private unnamed_addr constant [22 x i8] c"SDL audio shut down.\0A\00", align 1
@sdlCaptureDevice = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @SNDDMA_Shutdown() #0 {
  %1 = load i64, i64* @sdlPlaybackDevice, align 8
  %2 = icmp ne i64 %1, 0
  br i1 %2, label %3, label %8

3:                                                ; preds = %0
  %4 = call i32 @Com_Printf(i8* getelementptr inbounds ([38 x i8], [38 x i8]* @.str, i64 0, i64 0))
  %5 = load i64, i64* @sdlPlaybackDevice, align 8
  %6 = call i32 @SDL_CloseAudioDevice(i64 %5)
  %7 = call i32 @Com_Printf(i8* getelementptr inbounds ([35 x i8], [35 x i8]* @.str.1, i64 0, i64 0))
  store i64 0, i64* @sdlPlaybackDevice, align 8
  br label %8

8:                                                ; preds = %3, %0
  %9 = load i32, i32* @SDL_INIT_AUDIO, align 4
  %10 = call i32 @SDL_QuitSubSystem(i32 %9)
  %11 = load i32*, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @dma, i32 0, i32 0), align 8
  %12 = call i32 @free(i32* %11)
  store i32* null, i32** getelementptr inbounds (%struct.TYPE_2__, %struct.TYPE_2__* @dma, i32 0, i32 0), align 8
  store i64 0, i64* @dmasize, align 8
  store i64 0, i64* @dmapos, align 8
  %13 = load i32, i32* @qfalse, align 4
  store i32 %13, i32* @snd_inited, align 4
  %14 = call i32 @Com_Printf(i8* getelementptr inbounds ([22 x i8], [22 x i8]* @.str.2, i64 0, i64 0))
  ret void
}

declare dso_local i32 @Com_Printf(i8*) #1

declare dso_local i32 @SDL_CloseAudioDevice(i64) #1

declare dso_local i32 @SDL_QuitSubSystem(i32) #1

declare dso_local i32 @free(i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
